Put the right text for all the sections

--- a/index.html
+++ b/index.html
@@ -57,17 +57,12 @@
         class="container flex flex-col px-6 mx-auto mt-10 space-y-0 md:space-y-0 justify-center md:flex-col md:items-center md:justify-center"
       >
         <!--First item -->
-        <div class="flex mb-32 space-y-12 md: items-center">
-          <h2
-            class="max-w-md text-4xl font-bold text-center md:text-4xl md:text-center"
-          >
-          ONLINE EDUCATORS
-          </h2>
-        </div>
         <!-------------->
-        <div class="flex mb-32 space-y-12 md: items-center">
+
+          <!-------------->
+          <div class="flex mb-32 space-y-12 md: items-center">
             <h2
-            class="max-w-md text-4xl font-bold text-center md:text-4xl md:text-center"
+            class="max-w-md text-4xl font-bold text-center md:text-6xl md:text-center"
             >
             NOW IS 
             </h2>
@@ -194,7 +189,7 @@ We are an NFT Marketplace and community for online education
     <section id="waitlist">
         <div class="container flex  px-6 mx-auto mt-10 space-y-0 md:space-y-0 justify-center">
             <h2 class="max-w-md text-4xl font-bold text-center">
-                What's different about Manage?
+                Ready to grow your business with NFTs?
             </h2>
         </div>
                           <!-- Flex container -->
@@ -204,10 +199,10 @@ We are an NFT Marketplace and community for online education
               <!-- What's Different -->
               <div class="flex flex-col space-y-12 md:w-1/2">
                 <img src="img/mascot.png" style="height: 70%; width: 75%;">
-                <p class="max-w-sm text-center text-darkGrayishBlue md:text-left">
-                  Manage provides all the functionality your team needs, without the
-                  complexity. Our software is tailor-made for modern digital product
-                  teams.
+                <p class="max-w-sm text-center text-white text-3xl md:text-left">
+                    Hi, I am Master Wisdom
+                    Head of the KnOWLedge Society
+                    Looking forward to meeting you! 
                 </p>
               </div>
       
@@ -215,16 +210,15 @@ We are an NFT Marketplace and community for online education
               <div class="flex flex-col space-y-8 md:w-1/2">
                 <!--text  above list-->
                 <h2 class="max-w-md text-4xl font-bold text-center md:text-left">
-                    Join to Learn Web3
+                    Join the KnOWLedge Society 
                   </h2>
-                  <h3 class="max-w-md text-2xl font-bold text-center md:text-left">
-                    Who is this for?
-                  </h3>
                   <p class="max-w-sm text-center text-white md:text-left">
-                    Manage provides all the functionality your team needs, without the
-                    complexity. Our software is tailor-made for modern digital product
-                    teams.
+                    An exclusive, invite only community for online educators, coaches, and anyone who can offer services to course creators such as translators, designers, video producers and more. 
                   </p>
+                  <h3 class="max-w-md text-2xl font-bold text-center md:text-left">
+                    Why join?
+                  </h3>
+
               <!-- List Item 1 -->
               <div
                 class="flex flex-col space-y-3 md:space-y-0 md:space-x-6 md:flex-row">
@@ -334,7 +328,7 @@ We are an NFT Marketplace and community for online education
                         <a
                           href="#"
                           class="p-3 px-6 pt-2 text-white bg-[#C05DEE] rounded-full shadow-2xl baseline hover:bg-gray-900"
-                          >Get Started</a
+                          > Join the KnOWLedge Society waitlist</a
                         >
                       </div>
                     <form>
@@ -353,7 +347,7 @@ We are an NFT Marketplace and community for online education
                         <button
                           class="px-6 py-2 text-white rounded-full bg-[#C05DEE] hover:bg-brightRedLight focus:outline-none"
                         >
-                          Go
+                        Submit
                         </button>
                       </div>
                     </form>
