linking the nav to sections

--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
         </div>
         <!-- Menu Items -->
         <div class="hidden space-x-6 md:flex">
-          <a href="#" class="hover:text-darkGrayishBlue">About</a>
-          <a href="#" class="hover:text-darkGrayishBlue">NFT Marketplace</a>
-          <a href="#" class="hover:text-darkGrayishBlue">Creators</a>
-          <a href="#" class="hover:text-darkGrayishBlue">knOWLedge Society</a>
+          <a href="#join" class="hover:text-darkGrayishBlue">Community</a>
+          <a href="#waitlist" class="hover:text-darkGrayishBlue">KnOWLedge Society</a>
+          <a href="#footer" class="hover:text-darkGrayishBlue">Socials</a>
         </div>
         <!-- Button -->
 
@@ -337,7 +336,7 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-[#7144CF]">
+    <footer id="footer" class="bg-[#7144CF]">
       <!-- Flex Container -->
       <div
         class="container flex flex-col px-6 py-24 items-center space-y-12 mx-auto md:py-12 md:flex-col md:space-y-0"
