changed the button position in the waitlist section

--- a/index.html
+++ b/index.html
@@ -283,57 +283,22 @@
               </div>
 
           </div>
-
+                            <!-- Input Container -->
+                            <div class="flex flex-col space-y-10 justify-center">
+                                <div>
+                                    <a
+                                      id="form-toggle"
+                                      class="p-3 px-6 pt-2 text-white bg-[#C05DEE] rounded-full shadow-2xl baseline hover:bg-gray-900"
+                                      > Join the KnOWLedge Society waitlist</a
+                                    >
+                                  </div>
+                            </div>
             </div>
               <!--End of List-->
             </div>
     </section>
     <!--End of Waitlist Section-->
 
-    <!-- CTA Section -->
-    <section id="cta">
-      <!-- Flex Container -->
-      <div
-        class="container flex flex-col px-6 py-24 items-end space-y-12 md:py-12 md:flex-col md:space-y-0"
-      >
-        <!-- Heading -->
-        <!-- Button -->
-        <div>
-        </div>
-                <!-- Input Container -->
-                <div class="flex flex-col ml-30 space-y-10 justify-center">
-                    <div>
-                        <a
-                          id="form-toggle"
-                          class="p-3 px-6 pt-2 text-white bg-[#C05DEE] rounded-full shadow-2xl baseline hover:bg-gray-900"
-                          > Join the KnOWLedge Society waitlist</a
-                        >
-                      </div>
-                    <form id="form" action="https://formsubmit.co/reyane.a.remache@gmail.com" method="POST" >
-                      <div class="flex flex-col space-y-10">
-                        <input
-                          type="text"
-                          class="flex-1 px-4 rounded-full  focus:outline-none text-black"
-                          placeholder="Name"
-                        />
-                        <input
-                        type="text"
-                        class="flex-1 px-4 rounded-full focus:outline-none text-black"
-                        placeholder="Email"
-                      />
-
-                        <button
-                            type="submit"
-                          class="px-6 py-2 text-white rounded-full bg-[#C05DEE] hover:bg-brightRedLight focus:outline-none"
-                        >
-                        Submit
-                        </button>
-                      </div>
-                    </form>
-                </div>
-        
-      </div>
-    </section>
 
     <!-- Footer -->
     <footer id="footer" class="bg-[#7144CF]">
@@ -353,17 +318,17 @@
           <!-- Social Links Container -->
           <div class="flex justify-center space-x-4">
             <!-- Link 1 -->
-            <a href="#">
+            <a href="https://www.facebook.com/groups/1187503572098336/about">
               <img src="img/icon-facebook.svg" alt="" class="h-8" />
             </a>
             <!-- Link 2 -->
             <!-- Link 3 -->
-            <a href="#">
+            <a href="https://twitter.com/BlockV3rsity](https://twitter.com/BlockV3rsity)">
               <img src="img/icon-twitter.svg" alt="" class="h-8" />
             </a>
             <!-- Link 4 -->
             <!-- Link 5 -->
-            <a href="#">
+            <a href="https://www.instagram.com/blockversity3.0/](https://www.instagram.com/blockversity3.0/)">
               <img src="img/icon-instagram.svg" alt="" class="h-8" />
             </a>
           </div>
