--- a/index.html
+++ b/index.html
@@ -287,6 +287,7 @@
                             <div class="flex flex-col space-y-10 justify-center">
                                 <div>
                                     <a
+                                    href="https://tally.so/#tally-open=w5X4XN&tally-width=350&tally-align-left=1&tally-auto-close=3000%22%3EClick"
                                       id="form-toggle"
                                       class="p-3 px-6 pt-2 text-white bg-[#C05DEE] rounded-full shadow-2xl baseline hover:bg-gray-900"
                                       > Join the KnOWLedge Society waitlist</a
@@ -341,5 +342,6 @@
     </footer>
 
     <script src="js/script.js"></script>
+    <script async src="https://tally.so/widgets/embed.js"></script>
   </body>
 </html>
