fixed the list display for small devices

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
             </h2>
           </div>
           <!-------------->
-          <div class="flex space-y-12 mb-5 md:items-center">
+          <div class="flex space-y-12 mb-5 justify-center md:items-center">
             <h2
-            class="max-w-md text-2xl font-bold text-center md:text-2xl md:text-center"
+            class="text-2xl font-bold md:text-2xl"
             >
             NOW IS 
             </h2>
@@ -110,68 +110,47 @@
               </p>
           <!-- List Item 1 -->
           <div
-            class="flex flex-col space-y-1 md:space-y-1 md:space-x-2 md:flex-row">
-            <!-- Heading -->
-            <div class="rounded-l-full md:bg-transparent">
-              <div class="flex items-center space-x-2">
-                <div
-                  class="px-1 py-2 text-white rounded-full"
-                >
-                  <img src="img/tick.svg">
-                </div>
-              </div>
-            </div>
+          class="flex flex-col space-y-2 md:space-y-0 md:space-x-6 md:flex-row">
+          <!-- Heading -->
 
-            <div>
-              <h3 class="hidden text-sm md:block">
+          <div class="flex flex-row items-start">
+            <img src="img/tick.svg" class="py-2 px-1">
+            <p class="text-sm px-6 py-1">
                 Learn how web3 impacts education
-                
-              </h3>
-            </div>
+            </p>
           </div>
+
+        </div>
 
           <!-- List Item 2 -->
           <div
-          class="flex flex-col space-y-3 mt-5 md:space-y-0 md:space-x-2 md:flex-row">
+          class="flex flex-col space-y-2 md:space-y-0 md:space-x-6 md:flex-row">
           <!-- Heading -->
-          <div class="rounded-l-full md:bg-transparent">
-            <div class="flex items-center space-x-2">
-              <div
-                class="px-1 py-1 text-white rounded-full"
-              >
-                <img src="img/tick.svg">
-              </div>
-            </div>
+
+          <div class="flex flex-row items-start">
+            <img src="img/tick.svg" class="py-2 px-1">
+            <p class="text-sm px-6 py-1">
+                Learn how web3 can benefit any business or industry
+            </p>
           </div>
 
-          <div>
-            <h3 class="text-sm md:block">
-                Learn how web3 can benefit any business or industry
-            </h3>
-          </div>
         </div>
 
           <!-- List Item 3 -->
 
           <div
-            class="flex flex-col space-y-3 md:space-y-1 md:space-x-2 md:flex-row">
-            <!-- Heading -->
-            <div class="rounded-l-full md:bg-transparent">
-              <div class="flex items-center space-x-2">
-                <div
-                  class="px-1 py-2 text-white rounded-full"
-                >
-                  <img src="img/tick.svg">
-                </div>
-              </div>
-            </div>
+          class="flex flex-col space-y-2 md:space-y-0 md:space-x-6 md:flex-row">
+          <!-- Heading -->
 
-            <div class="align-center">
-              <h3 class="text-sm md:block">
+          <div class="flex flex-row items-start">
+            <img src="img/tick.svg" class="py-2 px-1">
+            <p class="text-sm px-6 py-1">
                 Join online and IRL events
-              </h3>
-            </div>
+            </p>
           </div>
+
+        </div>
+
           <!--Button Link to Socials-->
           <div class="flex flex-col space-y-10 mx-auto justify-center ">
             <div>
