Fixed the "learn more" link on tablette.

--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
         <img class="logo-1-1" src="img/logo-1-4@1x.png" alt="logo 1" />
         <div class="join-the-waitlist-menu">
           <a href="https://tally.so/#tally-open=w7XVR0&tally-width=350&tally-align-left=1&tally-auto-close=3000"
-            style="color:white"><div class="overlap-group-5">
-            <div class="join-the-waitlist-2 outfit-bold-cultured-pearl-11px">Join the Waitlist</div>
-          </div></a>
+            style="color:white">
+            <div class="overlap-group-5">
+              <div class="join-the-waitlist-2 outfit-bold-cultured-pearl-11px">Join the Waitlist</div>
+            </div>
+          </a>
         </div>
       </div>
       <div class="hero-section-table-new-landing">
@@ -100,9 +102,11 @@
           </p>
         </div>
         <a href="https://tally.so/#tally-open=w7XVR0&tally-width=350&tally-align-left=1&tally-auto-close=3000"
-          style="color:white"><div class="overlap-group-6" style="position:relative;margin-top:130px;">
-          <div class="join-the-waitlist-3 outfit-bold-cultured-pearl-12px">Join the Waitlist</div>
-        </div></a>
+          style="color:white">
+          <div class="overlap-group-6" style="position:relative;margin-top:130px;">
+            <div class="join-the-waitlist-3 outfit-bold-cultured-pearl-12px">Join the Waitlist</div>
+          </div>
+        </a>
       </div>
       <div class="sell-your-courses-group">
         <div class="mobile-container">
@@ -121,9 +125,11 @@
               emails<br /><br />Receive</span><span class="outfit-bold-white-12px"> instant payment</span>
           </p>
           <a href="https://tally.so/#tally-open=w7XVR0&tally-width=350&tally-align-left=1&tally-auto-close=3000"
-            style="color:white"><div class="overlap-group-7">
-            <div class="join-the-waitlist-4 outfit-bold-cultured-pearl-12px">Join the Waitlist</div>
-          </div></a>
+            style="color:white">
+            <div class="overlap-group-7">
+              <div class="join-the-waitlist-4 outfit-bold-cultured-pearl-12px">Join the Waitlist</div>
+            </div>
+          </a>
         </div>
       </div>
       <div class="knowledge-society-group-mobile">
@@ -196,16 +202,18 @@
         </div>
         <div class="cta-group-join-ksociety">
           <a href="https://tally.so/#tally-open=w5X4XN&tally-width=350&tally-align-left=1&tally-auto-close=3000"
-            style="color:white;border:solid 1px green;"><div class="overlap-group3">
-            <p class="join-the-kn-ow-ledge-society-waitlist-3 outfit-bold-cultured-pearl-12px">
-              Join the KnOWLedge Society waitlist
-            </p>
-          </div></a>
+            style="color:white;border:solid 1px green;">
+            <div class="overlap-group3">
+              <p class="join-the-kn-ow-ledge-society-waitlist-3 outfit-bold-cultured-pearl-12px">
+                Join the KnOWLedge Society waitlist
+              </p>
+            </div>
+          </a>
         </div>
         <div class="overlap-group4" style="top:50px;margin:auto;">
           <div class="submit-cta-mobile">
             <img class="mascot-no-background-1-at-footer-1" src="img/mascot-no-background-1-at-footer-1@2x.png"
-              alt="mascot no background 1 at footer" style="margin:auto;"/>
+              alt="mascot no background 1 at footer" style="margin:auto;" />
           </div>
         </div>
       </div>
@@ -221,7 +229,9 @@
         <div class="join-waitlist-menu">
           <div class="overlap-group">
             <a href="https://tally.so/#tally-open=w7XVR0&tally-width=350&tally-align-left=1&tally-auto-close=3000"
-              style="color:white"><div class="join-the-waitlist outfit-bold-cultured-pearl-16px">Join the Waitlist</div></a>
+              style="color:white">
+              <div class="join-the-waitlist outfit-bold-cultured-pearl-16px">Join the Waitlist</div>
+            </a>
           </div>
         </div>
       </div>
@@ -250,9 +260,11 @@
       <div class="pok-group">
         <div class="overlap-group5">
           <a href="https://tally.so/#tally-open=w7XVR0&tally-width=350&tally-align-left=1&tally-auto-close=3000"
-            style="color:white"><div class="overlap-group-1" style="margin-top:60px;">
-            <div class="join-the-waitlist-1 outfit-bold-cultured-pearl-16px">Join the Waitlist</div>
-          </div></a>
+            style="color:white">
+            <div class="overlap-group-1" style="margin-top:60px;">
+              <div class="join-the-waitlist-1 outfit-bold-cultured-pearl-16px">Join the Waitlist</div>
+            </div>
+          </a>
           <p class="proof-of-knowledge outfit-bold-white-22px">
             <span class="outfit-bold-white-22px">Proof of Knowledge:</span><span class="outfit-normal-white-22px">
               Delight your students by ‘airdropping’ beautiful</span><span class="outfit-bold-white-22px">
@@ -296,9 +308,11 @@
               emails<br /><br />Receive</span><span class="outfit-bold-white-22px"> instant payment</span>
           </p>
           <a href="https://tally.so/#tally-open=w7XVR0&tally-width=350&tally-align-left=1&tally-auto-close=3000"
-            style="color:white"><div class="overlap-group-2">
-            <div class="join-the-waitlist outfit-bold-cultured-pearl-16px">Join the Waitlist</div>
-          </div></a>
+            style="color:white">
+            <div class="overlap-group-2">
+              <div class="join-the-waitlist outfit-bold-cultured-pearl-16px">Join the Waitlist</div>
+            </div>
+          </a>
         </div>
       </div>
       <div class="group-container">
@@ -409,8 +423,10 @@
         <div class="submit-button-1">
           <div class="overlap-group-10">
             <a href="https://tally.so/#tally-open=w7XVR0&tally-width=350&tally-align-left=1&tally-auto-close=3000"
-              style="color:white"><div class="cta-community-1"></div>
-            <div class="join-the-waitlist-5 outfit-bold-cultured-pearl-14px">Join the Waitlist</div></a>
+              style="color:white">
+              <div class="cta-community-1"></div>
+              <div class="join-the-waitlist-5 outfit-bold-cultured-pearl-14px">Join the Waitlist</div>
+            </a>
           </div>
         </div>
       </div>
@@ -442,9 +458,11 @@
       </div>
       <div class="pok-group-2">
         <a href="https://tally.so/#tally-open=w7XVR0&tally-width=350&tally-align-left=1&tally-auto-close=3000"
-          style="color:white"><div class="overlap-group-11">
-          <div class="join-the-waitlist-6 outfit-bold-white-14px-2">Join the Waitlist</div>
-        </div></a>
+          style="color:white">
+          <div class="overlap-group-11">
+            <div class="join-the-waitlist-6 outfit-bold-white-14px-2">Join the Waitlist</div>
+          </div>
+        </a>
         <p class="proof-of-knowledge-2 outfit-bold-white-14px">
           <span class="outfit-bold-white-14px">Proof of Knowledge:</span><span class="outfit-normal-white-14px"> Delight
             your students by ‘airdropping’ beautiful</span><span class="outfit-bold-white-14px"> POKs</span><span
@@ -488,16 +506,18 @@
               emails<br /><br />Receive</span><span class="outfit-bold-white-14px"> instant payment</span>
           </p>
           <a href="https://tally.so/#tally-open=w7XVR0&tally-width=350&tally-align-left=1&tally-auto-close=3000"
-            style="color:white"><div class="overlap-group-12">
-            <div class="join-the-waitlist-7 outfit-bold-cultured-pearl-14px">Join the Waitlist</div>
-          </div></a>
+            style="color:white">
+            <div class="overlap-group-12">
+              <div class="join-the-waitlist-7 outfit-bold-cultured-pearl-14px">Join the Waitlist</div>
+            </div>
+          </a>
         </div>
       </div>
       <div class="knowledge-society-group">
         <div class="overlap-group5-2">
           <div class="overlap-group4-1">
-            <div class="learn-more-1 outfit-normal-white-14px"><a href="how-it-works.html" style="color:white;">Learn
-                more</a></div>
+            <div class="learn-more-1 outfit-normal-white-14px" style="z-index: 10;"><a href="how-it-works.html"
+                style="color:white;">Learn more</a></div>
             <p class="get-behind-the-scene-2 outfit-normal-white-14px">
               Get behind the scene to help define blockVersity
             </p>
